<resources>
    <string name="app_name">DrugStore</string>
    <string name="nameDrugStore">DrugStore 1</string>
    <string name="searchDrugStore">Search DrugStore</string>
    <string name="map">Map</string>
    <string name="urine">Urine Test</string>
    <string name="review">Review:</string>
    <string name="location">Location:</string>
    <string name="address"> 20 Hoàng Quốc Việt</string>
    <string name="phone">Phone:</string>
    <string name="numberPhone"> 048-430-0271</string>
    <string name="time">Time:</string>
    <string name="start"> Open at AM9:00~PM7:00 Close</string>
    <string name="service">Service</string>
    <string name="product">Product Used</string>
    <string name="comment">Comment</string>
    <string name="date">2018/06/02</string>
    <string name="userComment">User comment</string>
    <string name="user">User</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="nameClinic">Clinic 1</string>
    <string name="web">Website</string>
    <string name="language">English</string>
    <string name="link">https://www.omipharma.vn/about-omicare/</string>
    <string name="clinic">Clinics</string>
    <string name="see">➜ See more</string>
    <string name="timeWorking">Working Time</string>
    <string name="week">Days of the week</string>
    <string name="timeMorning">09:00~12:00</string>
    <string name="timeEvening">17:30~19:30</string>
    <string name="note">Note</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="tick">✓</string>
    <string name="detailDrugStore">Detail of DrugStore</string>
    <string name="detailClinic">Detail of Clinic</string>
    <string name="personalDetails">Personal Details</string>
    <string name="omicare">Omicare</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="medicine">Name of Medicine</string>
    <string name="subtitle">SubTitle</string>
    <string name="price">Price: </string>
    <string name="tax">140$ (154$ VAT)</string>
    <string name="number">123</string>
    <string name="similarProduct">Similar Products</string>
    <string name="check">✓</string>
    <string name="Email">Email</string>
    <string name="drugstore">Drug Store</string>
    <string name="Password">Password</string>
    <string name="urNotMemnber">You Are Not Member</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="title_activity_scan_bar_code">ScanBarCodeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="Email">Email</string>
    <string name="drugstore">Drug Store</string>
    <string name="Password">Password</string>
    <string name="urNotMemnber">You Are Not Member</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="Signup">Sign up</string>
    <string name="title_activity_scan_bar_code">ScanBarCodeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="searchDrugs">Search Drugs</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="searchDrugs">Search Drugs</string>


    <string name="scan_inside_frame">Please scan barcode inside the frame</string>


    <string name="scan_inside_frame">Please scan barcode inside the frame</string>

    <string name="sreach_drug">Search for Drug Information</string>
    <string name="search_for_drug_information">Search For Drug Information</string>
    <string name="address_search">Address Search</string>

    <string name="sreach_drug">Search for Drug Information</string>
    <string name="search_for_drug_information">Search For Drug Information</string>
    <string name="address_search">Address Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_by_keyword">Search by keyword</string>
    <string name="search">Search</string>
    <string name="results_found">Results Found</string>

    <string name="title_activity_maps">Map</string>

</resources>