<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="@dimen/_150sdp">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/salonpas"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNameProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/arial"
        android:maxLines="2"
        android:text="@string/medicine"

        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="@string/tax"
        android:textColor="#FF9800"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameProduct" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="@string/number"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tax" />

    <ImageView
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@drawable/ic_unlike"
        app:layout_constraintLeft_toRightOf="@+id/txtNumber"
        app:layout_constraintTop_toBottomOf="@+id/tax" />
</androidx.constraintlayout.widget.ConstraintLayout>