<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDFD"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/toolbarMedicine">

                <ViewFlipper
                    android:id="@+id/viewImageStore"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@drawable/pharmacy" />

                <me.relex.circleindicator.CircleIndicator
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_alignBottom="@+id/viewImageStore"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>


        <TextView
            android:id="@+id/txtNameDrugStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@color/white"
            android:fontFamily="@font/arial"
            android:text="@string/nameDrugStore"
            android:textColor="#1AA6CD"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/viewImageStore" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#898989" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNameDrugStore"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/review"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@android:style/Widget.Material.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_pin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/location"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/address"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/phone"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/numberPhone"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/time"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/start"
                    android:textColor="#898989"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="#B6B3B3" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/linear1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/service"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="#898989" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="#B6B3B3" />

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_1sdp"
                android:background="@color/white"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/product"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="#898989" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcProductUsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="#B6B3B3" />

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_weight="4"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/arial"
                    android:text="@string/comment"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="#898989" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/edtComment"
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edittext"
                    android:gravity="top"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="200"
                    android:minHeight="@dimen/_100sdp"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtDateCommentDS"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/date" />

                    <RatingBar
                        android:id="@+id/reviewCommentDS"
                        style="@android:style/Widget.Material.Light.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:numStars="5"
                        android:isIndicator="false"
                        android:stepSize="0.5" />

                    <Button
                        android:id="@+id/btnCommentDS"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_50sdp"
                        android:background="@drawable/button"
                        android:text="@string/comment"
                        android:textColor="#1AA6CD" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>