<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40sdp">

    <TextView
        android:id="@+id/txtComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/arial"
        android:maxLength="50"
        android:text="@string/userComment"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/megaphone"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:background="@drawable/ic_megaphone"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/txtNameUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComment" />

    <TextView
        android:id="@+id/txtNameUser"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arial"
        android:text="@string/user"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/calender"
        app:layout_constraintStart_toEndOf="@+id/megaphone"
        app:layout_constraintTop_toBottomOf="@+id/txtComment" />

    <ImageView
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_calendar"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintLeft_toRightOf="@+id/txtNameUser"
        app:layout_constraintTop_toBottomOf="@+id/txtComment" />

    <TextView
        android:id="@+id/dateComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/arial"
        android:text="@string/date"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@+id/calender"
        app:layout_constraintTop_toBottomOf="@+id/txtComment" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateComment" />
</androidx.constraintlayout.widget.ConstraintLayout>